# nodebb-fall-2025-foundations

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.ollama  Dockerfile.translator  LLM_INTEGRATION.md  README.md  UserGuide.md  app.py  docker-compose-redis.yml  docker-compose.yml  init-ollama.sh  main.py  ollama-entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements-translator.txt  setup-ollama.sh  stryker.config.json  test_llm_translation.py  user-guide.md
.github/workflows/: artillery-performance-test.yml  artillery-test.yml  retire.yml
artillery-tests/: ARTILLERY_EVALUATION.md  artillery-output-api.txt  artillery-output-basic.txt  artillery-output-ci.txt  artillery-output-stress.txt  artillery-test-api.yml  artillery-test-basic.yml  artillery-test-ci.yml  artillery-test-stress.yml
public/openapi/: write.yaml
reports/mutation/: mutation.html
src/: emailer.js  flags.js  translator.py
src/api/: categories.js  posts.js
src/categories/: create.js  index.js  topics.js  update.js
src/controllers/: categories.js  topics.js
src/meta/: logs.js
src/posts/: create.js  data.js  index.js  resolved.js
src/privileges/: categories.js  helpers.js
src/routes/: api.js  feeds.js
src/topics/: index.js  needsAttention.js  posts.js
src/translate/: index.js
src/user/: admin.js  create.js  posts.js  profile.js
test/: activitypub.js  api.js  categories.js  category-create-delete.js  controllers-admin.js  flags.js  notifications.js  posts.js  search.js  topics.js  user.js  utils.js
test/mocks/: databasemock.js
test/posts/: resolved.js  (+1 more)
(+36 files in other folders)
