[project]
name = "llm-experiment-microservice-foundations"
version = "0.1.0"
description = "Translation microservice for NodeBB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "pytest==7.4.0",
    "ollama>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
